Pieniä parannuksia OmaMoottoriin ja Palvelupisteeseen