@@ -1,37 +1,40 @@
 package simu.model;
 
 import eduni.distributions.ContinuousGenerator;
+import eduni.distributions.LogNormal;
 import eduni.distributions.Negexp;
 import eduni.distributions.Normal;
 import simu.framework.*;
 
+import java.util.ArrayList;
 import java.util.LinkedList;
 import java.util.Random;
 
 public class OmaMoottori extends Moottori{
 
 	public static int matkustajienMaara;
-	public static int bussienMaara = 8;
+	public static int bussienMaara = 4;
 	private Saapumisprosessi bussiSaapumisprosessi;
 	private Saapumisprosessi saapumisprosessi;
 	private Saapumisprosessi bussiLahtoprosessi;
-	private ContinuousGenerator bussiGeneraattori = new Normal(20,1);
+	private ContinuousGenerator bussiGeneraattori = new Normal(5,1);
 	private ContinuousGenerator lahdonViivastys = new Normal(3,1);
 	private LinkedList<Palvelupiste> prioriteettiJonoPalvelupisteille = new LinkedList<Palvelupiste>();
+
+
 
 	public OmaMoottori(){
 		// Annetaan arraylle bussienMaara koon
 		palvelupisteet = new Palvelupiste[bussienMaara - 1];
-
 		// Luodaan tapahtumatyyppiä DEP1 bussienMaara verran palvelupisteitä eli busseja terminaalia varten
 		for (int i = 0 ; i < palvelupisteet.length; i++){
 			palvelupisteet[i] = new Palvelupiste(new Normal(10,1),tapahtumalista,TapahtumanTyyppi.DEP1);
 		}
 
 
-		saapumisprosessi = new Saapumisprosessi(new Negexp(1,5), tapahtumalista, TapahtumanTyyppi.ARR1);
-		bussiSaapumisprosessi = new Saapumisprosessi(new Normal(20,1.5), tapahtumalista, TapahtumanTyyppi.BUSARR);
-		bussiLahtoprosessi = new Saapumisprosessi(new Normal(3,1),tapahtumalista, TapahtumanTyyppi.BUSDEP);
+		saapumisprosessi = new Saapumisprosessi(new Negexp(0.5,5), tapahtumalista, TapahtumanTyyppi.ARR1);
+		bussiSaapumisprosessi = new Saapumisprosessi(new Normal(3,0.5), tapahtumalista, TapahtumanTyyppi.BUSARR);
+		bussiLahtoprosessi = new Saapumisprosessi(new Normal(3,0.5),tapahtumalista, TapahtumanTyyppi.BUSDEP);
 	}
 
 
@@ -67,35 +70,48 @@ public class OmaMoottori extends Moottori{
 					a.raportti();
 				}
 
+
 			// Jos BUSARR niin luo uuden tapahtuman tyyppiä BUSARR
-			case BUSARR: Tapahtuma i = new Tapahtuma(TapahtumanTyyppi.BUSARR, Kello.getInstance().getAika() + bussiGeneraattori.sample());
+			case BUSARR: Tapahtuma i = new Tapahtuma(TapahtumanTyyppi.BUSDEP, Kello.getInstance().getAika() + bussiGeneraattori.sample());
 				// Asettaa asiakkaan "haluaman" palvelupisteelle valmi lahtoon false
 				palvelupisteet[a.getBussiNumero()].setValmisLahtoon(false);
-				System.out.println("Bussi on pysäkillä");
+				System.out.println("Bussi " + a.getBussiNumero() + " on pysäkillä" + Kello.getInstance().getAika());
 				// Lisää arrayyn asiakkaan "haluaman" palvelupisteen
 				prioriteettiJonoPalvelupisteille.add(palvelupisteet[a.getBussiNumero()]);
+				prioriteettiJonoPalvelupisteille.get(0).setOnPysakilla(true);
+				System.out.println(prioriteettiJonoPalvelupisteille.add(palvelupisteet[a.getBussiNumero()]));
+				System.out.println("Lisätty");
+				for (Palvelupiste ab : prioriteettiJonoPalvelupisteille){
+					System.out.println(ab.getMatkustajat());
+				}
 				// Generoi uuden tapahtuman saapumisprosessille bussilahtoprosessi ja lisää sitä tapahtumalistan "lista" priorityqueuen arraylist
 				bussiLahtoprosessi.generoiSeuraava();
 
 			// Jos BUSDEP
 			case BUSDEP:
-				// Kokeile asettaa ensimmäiselle arraylle valmis lahtoon true
-				try {
-					prioriteettiJonoPalvelupisteille.getFirst().setValmisLahtoon(true);
-				// Busseja ei ole listalla
-				} catch (Exception NoSuchElementException) {
-					System.out.println("Ei busseja listassa");
+				//
+				if (prioriteettiJonoPalvelupisteille.get(0).getOnPysakilla()){
+					try {
+						prioriteettiJonoPalvelupisteille.get(0).setValmisLahtoon(true);
+						// Busseja ei ole listalla
+					} catch (Exception NoSuchElementException) {
+						System.out.println("Ei busseja listassa");
+					}
+					// Joka tapauksessa asettaa asiakkaan "haluaman" palvelupisteelle valmis lahtoon true
+					palvelupisteet[a.getBussiNumero()].setValmisLahtoon(true);
+					System.out.println("Bussi " + a.getBussiNumero() +" lähtee " + palvelupisteet[a.getBussiNumero()].getMatkustajat() + " " + Kello.getInstance().getAika());
+					prioriteettiJonoPalvelupisteille.get(0).setOnPysakilla(false);
+					palvelupisteet[a.getBussiNumero()].setMatkustajat(0);
+					// Ottaa ensimmäisen indexin ja poistaa sen
+					prioriteettiJonoPalvelupisteille.poll();
 				}
-				// Joka tapauksessa asettaa asiakkaan "haluaman" palvelupisteelle valmis lahtoon true
-				palvelupisteet[a.getBussiNumero()].setValmisLahtoon(true);
-				// Ottaa ensimmäisen indexin ja poistaa sen
-				prioriteettiJonoPalvelupisteille.poll();
-				System.out.println("Bussi lähtee");
+
 		}
 	}
 
 	@Override
 	protected void tulokset() {
+		System.out.println("Kaikki asiakkaat yhteensä " + Asiakas.getId());
 		System.out.println("Simulointi päättyi kello " + Kello.getInstance().getAika());
 		System.out.println("Tulokset ... puuttuvat vielä");
 		// TODO: Palveltujen asiakkaiden määrä palvelupisteessä
